--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body{
-    background-color: salmon;
+    background-color: rgb(223, 223, 223);
 }
 header{
- background-color: red;
+ /* background-color: red; */
     height: 200px;
     position: relative;
 }
@@ -11,9 +11,18 @@ header ul  {
     top: 70%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background-color: skyblue;
+    /* background-color: skyblue; */
     width: fit-content;
+
     
+}
+header ul li a{
+    text-decoration: none;
+
+}
+header ul li a:hover{
+    text-decoration-line: underline;
+
 }
 header img{
     position: absolute;
@@ -28,18 +37,27 @@ header ul li{
     text-decoration: none;
 }
 main{
-    background-color: rosybrown;
+    /* background-color: rosybrown; */
     position: relative;
     
 }
 footer{
-    background-color: royalblue;
+    background-color: rgb(214, 214, 214);
 }
 .leftbar{
-    width: 20%;
+    width: 18%;
     position: absolute;
-    left: 0em;
+    left: 1em;
+    border-style: solid;
+    border-width: 1px 
     
+    
+    
+}
+.leftbar ul{
+    padding-left: 10px;
+    height: 800px;
+
 }
 .leftbar ul li{
     padding: 20px 0px 20px 0px ;
@@ -49,6 +67,12 @@ footer{
     width: 80%;
     position: absolute;
     left: 20%;
-    background-color: seagreen;
+    /* background-color: seagreen; */
     height: 500px;
+}
+
+#productlist div{
+    display: inline-block;
+    padding: 0px 10px 10px ;
+
 }
